--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/KingIIILucifer666/express-crash-course#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "express": "^4.21.2"
   }
 }
